@@ -4,3 +4,4 @@ Perubahan
 # Penambahan requiredbuilder dan md5sum ceator pada modul build paket tlz - 2/09/2011
 # Mengganti path dan memindahkan modul serviceconfig dan kernelconfig ke /usr/share/tcpanel/modules/nama_modul - 3/09/2011
 # Merubah path source dan menambahkan Makefile - 19/09/2011
+# Memperbaiki Make File, menambahkan prefix - 8/2/2012
